--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,6 @@ ul {
     display: block;
 }
 
-
-
 .section-title {
     font-weight: 700;
     font-size: 36px;
@@ -154,8 +152,8 @@ ul {
     color: var(--accent-color)
 }
 
-.nav .link:hover,
-.nav .link:focus {
+.nav-link:hover,
+.nav-link:focus {
     color: var(--accent-color);
 }
 
@@ -433,14 +431,11 @@ ul {
     border: 1px solid var(--icons-color);
     border-radius: var(--border-radius);
     width: 170px;
+    height: 92px;
     fill: var(--icons-color);
 }
 
-.clients-icon {
-    margin-top: 16px;
-    margin-bottom: 16px;
 
-}
 
 .clients-item .link:hover,
 .clients-item .link:focus {
@@ -457,7 +452,7 @@ ul {
 }
 
 .page-footer .logo {
-    display: flex;
+    display: inline-block;
     margin-bottom: 20px;
 }
 
@@ -466,7 +461,7 @@ ul {
 }
 
 .footer-box-address {
-    width: 231px;
+
     margin-right: 70px;
 }
 
@@ -487,10 +482,7 @@ ul {
     color: var(--white-color-90);
 }
 
-.footer-logo:hover,
-.footer-logo:focus,
-.address-map:hover,
-.address-map:focus,
+
 .address-email:focus,
 .address-email:hover,
 .address-tel:focus,
@@ -501,6 +493,7 @@ ul {
 
 .page-footer .container {
     display: flex;
+    align-items: baseline;
 }
 
 .join {
@@ -518,11 +511,6 @@ ul {
     display: flex;
 }
 
-.footer-box-links {
-    display: block;
-    padding-top: 12px;
-    margin-bottom: 20px;
-}
 
 .footer-box-links .item:not(:last-child) {
     margin-right: 10px;
@@ -548,7 +536,11 @@ ul {
 }
 
 
-/* Портфоліо */
+/**
+  |============================
+  | Портфоліо
+  |============================
+*/
 
 /* Фільтр */
 
@@ -559,9 +551,6 @@ ul {
     gap: 8px;
 }
 
-/* .portfolio-filter .item:not(:first-child) {
-    margin-left: 8px;
-} */
 
 .portfolio-btn {
     cursor: pointer;
@@ -582,9 +571,6 @@ ul {
     color: var(--primary-white-color);
 }
 
-/* .portfolio-btn:first-child {
-    padding: 6px 25px;
-} */
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -604,15 +590,8 @@ ul {
     gap: 30px;
 }
 
-/* .project-item:not(:nth-of-type(3n)) {
-    margin-right: 30px;
-}
-
-.project-item:not(:nth-last-child(-n+3)) {
-    margin-bottom: 30px;
-} */
-
-.project-item:hover {
+.project-item .link:hover,
+.project-item .link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
